shecodes CSS spacing

--- a/index.html
+++ b/index.html
@@ -5,22 +5,86 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SheCodes HomePages</title>
+    <style>
+      body {
+        font-family: serif;
+      }
+      h1 {
+        color: #885df1;
+        font-size: 46px;
+        text-align: center;
+        text-decoration: underline;
+      }
+      button {
+        text-align: center;
+        padding: 20px 50px;
+        color: #885df1;
+        font-weight: bold;
+        display: block;
+        margin: 0 auto 30px auto;
+        font-size: 18px;
+        background: transparent;
+      }
+      img {
+        width: 400px;
+        display: block;
+        margin: 0 auto;
+      }
+      h2 {
+        color: #272044;
+        text-align: center;
+      }
+      p {
+        text-align: center;
+      }
+      .coders {
+        color: blue;
+        text-decoration: underline;
+      }
+      .courses {
+        color: red;
+        text-decoration: underline;
+      }
+      .Stories {
+        color: green;
+        text-decoration: underline;
+      }
+    </style>
   </head>
 
   <body>
     <h1>SheCodes</h1>
+    <h2>Coding WorkShop</h2>
+    <button>Apply Now</button>
     <ul>
       <li>
-        <a href="https://www.shecodes.io/students" target="_blank">Coders</a>
+        <a
+          href="https://www.shecodes.io/students"
+          target="_blank"
+          class="coders"
+        >
+          Coders
+        </a>
       </li>
       <li>
-        <a href="https://www.shecodes.io/workshops" target="_blank">Courses</a>
+        <a
+          href="https://www.shecodes.io/workshops"
+          target="_blank"
+          class="courses"
+        >
+          Courses
+        </a>
       </li>
       <li>
-        <a href="https://www.shecodes.io/stories " target="_blank">Stories</a>
+        <a
+          href="https://www.shecodes.io/stories"
+          target="_blank"
+          class="Stories"
+        >
+          Stories
+        </a>
       </li>
     </ul>
-
     <hr />
     <p><strong>More info</strong></p>
     <img
