--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
       body {
         font-family: serif;
+        background: whitesmoke;
       }
       h1 {
         color: #885df1;
@@ -15,39 +16,63 @@
         text-align: center;
         text-decoration: underline;
       }
-      button {
+      h2 {
+        color: #272044;
         text-align: center;
+        font-weight: normal;
+      }
+      button {
+        color: blueviolet;
+        background: white;
         padding: 20px 50px;
-        color: #885df1;
-        font-weight: bold;
         display: block;
-        margin: 0 auto 30px auto;
-        font-size: 18px;
-        background: transparent;
+        margin: 0 auto;
+        border: 1px solid blueviolet;
+        border-radius: 30px;
+        transition: all 250ms ease-in-out;
+      }
+      button:hover {
+        background: blueviolet;
+        color: white;
+        cursor: pointer;
       }
       img {
         width: 400px;
         display: block;
         margin: 0 auto;
       }
-      h2 {
-        color: #272044;
+
+      ul {
+        text-align: center;
+        padding: 10px;
+      }
+      li {
+        display: inline;
+        padding: 15px 60px 15px 60px;
         text-align: center;
       }
       p {
         text-align: center;
+        font-weight: bold;
+        font-size: 30px;
       }
       .coders {
         color: blue;
-        text-decoration: underline;
+        text-decoration: none;
+        font-weight: bold;
+        font-size: 20px;
       }
       .courses {
         color: red;
-        text-decoration: underline;
+        text-decoration: none;
+        font-weight: bold;
+        font-size: 20px;
       }
       .Stories {
         color: green;
-        text-decoration: underline;
+        text-decoration: none;
+        font-weight: bold;
+        font-size: 20px;
       }
     </style>
   </head>
@@ -56,7 +81,7 @@
     <h1>SheCodes</h1>
     <h2>Coding WorkShop</h2>
     <button>Apply Now</button>
-    <ul>
+    <ul id="horizontal-list">
       <li>
         <a
           href="https://www.shecodes.io/students"
@@ -89,7 +114,7 @@
     <p><strong>More info</strong></p>
     <img
       src="https://cdn0.iconfinder.com/data/icons/scenes-3-1/1700/coding_code_computer_laptop_woman_workspace_pet-512.png"
-      alt="Women who code"
+      alt="Women coding"
     />
   </body>
 </html>
