--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
       }
       button {
         color: blueviolet;
-        background: white;
+        background: whitesmoke;
         padding: 20px 50px;
         display: block;
         margin: 0 auto;
         border: 1px solid blueviolet;
         border-radius: 30px;
         transition: all 250ms ease-in-out;
+        font-size: 15px;
       }
       button:hover {
         background: blueviolet;
@@ -56,6 +57,12 @@
         font-weight: bold;
         font-size: 30px;
       }
+      a:hover {
+        text-decoration: underline;
+      }
+      span{
+        color: #885df1;
+      }
       .coders {
         color: blue;
         text-decoration: none;
@@ -73,6 +80,10 @@
         text-decoration: none;
         font-weight: bold;
         font-size: 20px;
+      }
+      .contact {
+        font-weight: bold;
+        text-align: center;
       }
     </style>
   </head>
@@ -116,5 +127,6 @@
       src="https://cdn0.iconfinder.com/data/icons/scenes-3-1/1700/coding_code_computer_laptop_woman_workspace_pet-512.png"
       alt="Women coding"
     />
+    <div class="contact"><span>Email:</span> hello@shecodes.io <span>Instagram:</span></span> @shecodes.io</div>
   </body>
 </html>
