--- a/workshop-week-01/index.html
+++ b/workshop-week-01/index.html
@@ -71,8 +71,7 @@
         button:hover{
             background:#811333;
             transition: all 250ms ease-in-out;
-            
-            
+            cursor: pointer; 
         }
     </style>
   </head>
