--- a/week02-workshop/index.html
+++ b/week02-workshop/index.html
@@ -98,7 +98,7 @@
     </ul>
 
     <button>Change city</button>
-    <p>Coded by Matt Delac</p>
+    <p>Coded by Edith Puclla</p>
     <script>
       function updateHeader(newHeader) {
         let header = document.querySelector("h1");
